# pyo3getset

./: .gitignore  Cargo.toml  setup.py  test.py
hashcore/: __init__.py
src/: lib.rs
