[package]
name = "hashcore"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.11.1"
serde = {version="1", features=['derive']}
serde_json = "1"

[lib]
name = "hashcore"
crate-type = ["cdylib"]
